@@ -1,3 +1,8 @@
+2003-05-07  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/i386.c (ix86_split_long_move): Fix base register
+	mode for XFmode splits for TARGET_64BIT.
+
 2003-02-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/s390/s390.c (s390_simplify_dwarf_addr): Simplify
